Add security to tag model
- Base user can only see tags

- Receptionist can create, edit and read tags

- Doctor can create, read, edit and delete tags

--- a/om_hospital/views/tags_view.xml
+++ b/om_hospital/views/tags_view.xml
@@ -10,6 +10,7 @@
     <menuitem
             id="menu_hospital_tag"
             name="Tags"
+            groups="group_hospital_receptionist"
             parent="menu_hospital_configuration"
             action="action_view_om_tags"
             sequence="4"
