Add security access related functionality

--- a/itl_hrm/views/assets_view.xml
+++ b/itl_hrm/views/assets_view.xml
@@ -41,6 +41,7 @@
             sequence="3"
             parent="menu_itl_hrm_root"
             action="action_itl_assets_view"
+            groups="itl_hrm.group_itl_hrm_assistant_hr"
     />
 
 </odoo>
