--- a/itl_hrm/views/department_view.xml
+++ b/itl_hrm/views/department_view.xml
@@ -10,6 +10,7 @@
                     <group>
                         <group>
                             <field name="name"/>
+                            <field name="manager_user_id" widget="many2one_avatar_user"/>
                         </group>
                     </group>
                 </sheet>
@@ -23,6 +24,7 @@
         <field name="arch" type="xml">
             <tree string="departments" editable="bottom">
                 <field name="name"/>
+                <field name="manager_user_id" widget="many2one_avatar_user"/>
             </tree>
         </field>
     </record>
