--- a/itl_hrm/views/employee_view.xml
+++ b/itl_hrm/views/employee_view.xml
@@ -11,8 +11,7 @@
                         <group>
                             <field name="name"/>
                             <field name="mobile"/>
-                            <field name="department"/>
-                            <field name="assets" widget="many2many_tags"/>
+                            <field name="department_id"/>
                             <field name="asset_given_date"/>
                         </group>
                     </group>
@@ -28,8 +27,7 @@
             <tree string="Employees">
                 <field name="name"/>
                 <field name="mobile"/>
-                <field name="department"/>
-                <field name="assets" widget="many2many_tags"/>
+                <field name="department_id"/>
                 <field name="asset_given_date"/>
             </tree>
         </field>
